# Deep-Learning-Exercices

./: .gitignore  main.py  pyproject.toml
notebooks/: ex1.ipynb
